# api/docs/swagger.json
@@ -1294,6 +1294,57 @@
                 }
             }
         },
+        "/sell-new": {
+            "post": {
+                "description": "selling product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product"
+                ],
+                "summary": "Selling product",
+                "parameters": [
+                    {
+                        "description": "sell_request",
+                        "name": "sell_request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.SellRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/staff": {
             "post": {
                 "description": "create a new staff",
@@ -2762,7 +2813,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "shopassistant_id": {
                     "type": "string"
@@ -2897,7 +2948,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
@@ -2935,7 +2986,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "shopassistant_id": {
                     "type": "string"
@@ -2955,6 +3006,23 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Sale"
+                    }
+                }
+            }
+        },
+        "models.SellRequest": {
+            "type": "object",
+            "properties": {
+                "basket_id": {
+                    "type": "string"
+                },
+                "branch_id": {
+                    "type": "string"
+                },
+                "products": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
                     }
                 }
             }
@@ -3179,7 +3247,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "shopassistant_id": {
                     "type": "string"
